--- a/Helm_charts/Postgres/values.yaml
+++ b/Helm_charts/Postgres/values.yaml
@@ -6,6 +6,6 @@ service:
 container:
   image: postgres
   env:
-    user: nasi
-    password: cnd2023
+    user: bibek
+    password: bibek1234
     db: authdb
