--- a/src/notification-service/manifest/secret.yaml
+++ b/src/notification-service/manifest/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: notification-secret
 stringData:
-  GMAIL_ADDRESS: "iambatmanthegoat@gmail.com" #enter your email to get the id
+  GMAIL_ADDRESS: "yesbibekaryal@gmail.com" #enter your email to get the id
   GMAIL_PASSWORD: "gkxk acif rhgv erjr"
 type: Opaque
 
